--- a/ethics.html
+++ b/ethics.html
@@ -30,7 +30,7 @@
         </p>
     </main>
     <footer>
-        <p>&copy; 2024 My GitHub Website</p>
+        <p>&copy; IT 304 Assignment 4</p>
     </footer>
 </body>
 </html>
