--- a/ethics.html
+++ b/ethics.html
@@ -18,19 +18,58 @@
     <main>
         <h1>Ethical Considerations in IT</h1>
         <p>Developers and IT professionals must adhere to ethical guidelines to ensure responsible technology use.</p>
-        <h2>Key Guidelines</h2>
+        <h2>Topics Covered</h2>
         <ul>
-            <li>Data privacy and security.</li>
-            <li>Fairness and inclusivity in algorithms.</li>
-            <li>Transparency in decision-making systems.</li>
-        </ul>
-        <h2>References</h2>
-        <p>
-            Content referenced from the <a href="https://www.acm.org/code-of-ethics">ACM Code of Ethics</a>.
-        </p>
-    </main>
-    <footer>
-        <p>&copy; IT 304 Assignment 4</p>
-    </footer>
-</body>
-</html>
+            <li><strong>History of Technology:</strong>
+                <ul>
+                    <li>Understanding the evolution of technology and its impact on society.</li>
+                    <li>Lessons from past innovations shaping ethical considerations.</li>
+                </ul>
+            </li>
+            <li><strong>Technology and Society:</strong>
+                <ul>
+                    <li>Impact of technological advancements on social structures and behavior.</li>
+                    <li>Balancing innovation with societal needs and values.</li>
+                </ul>
+            </li>
+            <li><strong>Case Studies:</strong>
+                <ul>
+                    <li>Boeing Max: Ethical failures in engineering and corporate responsibility.</li>
+                    <li>eScooters: Addressing safety, accessibility, and public space utilization.</li>
+                </ul>
+            </li>
+            <li><strong>Privacy and Surveillance:</strong>
+                <ul>
+                    <li>Ensuring data privacy in an increasingly connected world.</li>
+                    <li>Balancing national security with individual freedoms.</li>
+                </ul>
+            </li>
+            <li><strong>Misinformation and Disinformation:</strong>
+                <ul>
+                    <li>Understanding the spread of fake news and its societal implications.</li>
+                    <li>Promoting media literacy and combating false narratives.</li>
+                </ul>
+            </li>
+            <li><strong>Face Detection Technology:</strong>
+                <ul>
+                    <li>Bias and fairness in facial recognition systems.</li>
+                    <li>Ethical concerns in surveillance and privacy.</li>
+                </ul>
+            </li>
+            <li><strong>Deepfake AI:</strong>
+                <ul>
+                    <li>Challenges posed by manipulated media and false representations.</li>
+                    <li>Developing tools to detect and mitigate misuse.</li>
+                </ul>
+            </li>
+            <li><strong>Large Language Models (AI):</strong>
+                <ul>
+                    <li>Ethics of AI-generated content and misinformation risks.</li>
+                    <li>Balancing innovation with accountability in AI development.</li>
+                </ul>
+            </li>
+            <li><strong>Food, Farms, and Technology:</strong>
+                <ul>
+                    <li>Adopting sustainable technology in agriculture.</li>
+                    <
+
