--- a/ethics.html
+++ b/ethics.html
@@ -19,57 +19,71 @@
         <h1>Ethical Considerations in IT</h1>
         <p>Developers and IT professionals must adhere to ethical guidelines to ensure responsible technology use.</p>
         <h2>Topics Covered</h2>
+<ul>
+    <li><strong>History of Technology:</strong>
         <ul>
-            <li><strong>History of Technology:</strong>
-                <ul>
-                    <li>Understanding the evolution of technology and its impact on society.</li>
-                    <li>Lessons from past innovations shaping ethical considerations.</li>
-                </ul>
-            </li>
-            <li><strong>Technology and Society:</strong>
-                <ul>
-                    <li>Impact of technological advancements on social structures and behavior.</li>
-                    <li>Balancing innovation with societal needs and values.</li>
-                </ul>
-            </li>
-            <li><strong>Case Studies:</strong>
-                <ul>
-                    <li>Boeing Max: Ethical failures in engineering and corporate responsibility.</li>
-                    <li>eScooters: Addressing safety, accessibility, and public space utilization.</li>
-                </ul>
-            </li>
-            <li><strong>Privacy and Surveillance:</strong>
-                <ul>
-                    <li>Ensuring data privacy in an increasingly connected world.</li>
-                    <li>Balancing national security with individual freedoms.</li>
-                </ul>
-            </li>
-            <li><strong>Misinformation and Disinformation:</strong>
-                <ul>
-                    <li>Understanding the spread of fake news and its societal implications.</li>
-                    <li>Promoting media literacy and combating false narratives.</li>
-                </ul>
-            </li>
-            <li><strong>Face Detection Technology:</strong>
-                <ul>
-                    <li>Bias and fairness in facial recognition systems.</li>
-                    <li>Ethical concerns in surveillance and privacy.</li>
-                </ul>
-            </li>
-            <li><strong>Deepfake AI:</strong>
-                <ul>
-                    <li>Challenges posed by manipulated media and false representations.</li>
-                    <li>Developing tools to detect and mitigate misuse.</li>
-                </ul>
-            </li>
-            <li><strong>Large Language Models (AI):</strong>
-                <ul>
-                    <li>Ethics of AI-generated content and misinformation risks.</li>
-                    <li>Balancing innovation with accountability in AI development.</li>
-                </ul>
-            </li>
-            <li><strong>Food, Farms, and Technology:</strong>
-                <ul>
-                    <li>Adopting sustainable technology in agriculture.</li>
-                    <
+            <li>Ensuring technology advancements benefit all of society equally.</li>
+            <li>Avoiding repeating ethical mistakes from past innovations.</li>
+        </ul>
+    </li>
+    <li><strong>Technology and Society:</strong>
+        <ul>
+            <li>Balancing technological growth with respect for cultural and societal values.</li>
+            <li>Ensuring technology does not exacerbate social inequalities.</li>
+        </ul>
+    </li>
+    <li><strong>Case Studies:</strong>
+        <ul>
+            <li><strong>Boeing Max:</strong> Accountability in engineering failures and prioritizing safety over profits.</li>
+            <li><strong>eScooters:</strong> Addressing environmental impacts and equitable access to urban mobility solutions.</li>
+        </ul>
+    </li>
+    <li><strong>Privacy and Surveillance:</strong>
+        <ul>
+            <li>Balancing the need for surveillance with the right to personal privacy.</li>
+            <li>Preventing misuse of collected data for unauthorized purposes.</li>
+        </ul>
+    </li>
+    <li><strong>Misinformation and Disinformation:</strong>
+        <ul>
+            <li>Developing ethical frameworks to combat the spread of false information.</li>
+            <li>Promoting transparency and accountability in content creation and sharing.</li>
+        </ul>
+    </li>
+    <li><strong>Face Detection Technology:</strong>
+        <ul>
+            <li>Ensuring facial recognition algorithms are free from racial or gender bias.</li>
+            <li>Restricting unethical uses, such as unauthorized surveillance.</li>
+        </ul>
+    </li>
+    <li><strong>Deepfake AI:</strong>
+        <ul>
+            <li>Preventing malicious use of manipulated media for fraud or misinformation.</li>
+            <li>Establishing clear guidelines for ethical usage of deepfake technology.</li>
+        </ul>
+    </li>
+    <li><strong>Large Language Models (AI):</strong>
+        <ul>
+            <li>Addressing biases in AI-generated content and ensuring fairness in output.</li>
+            <li>Preventing misuse of AI for generating harmful or false information.</li>
+        </ul>
+    </li>
+    <li><strong>Food, Farms, and Technology:</strong>
+        <ul>
+            <li>Ensuring fair access to agricultural technology for small-scale farmers.</li>
+            <li>Minimizing environmental harm while enhancing food production efficiency.</li>
+        </ul>
+    </li>
+    <li><strong>Robotics and Ethics:</strong>
+        <ul>
+            <li>Addressing the displacement of workers by automation responsibly.</li>
+            <li>Ensuring human oversight in critical robotic applications.</li>
+        </ul>
+    </li>
+</ul>
+<h2>References</h2>
+<p>
+    Content referenced from the <a href="https://www.acm.org/code-of-ethics">ACM Code of Ethics</a>.
+</p>
+
 
