--- a/ethics.html
+++ b/ethics.html
@@ -81,9 +81,8 @@
         </ul>
     </li>
 </ul>
-<h2>References</h2>
 <p>
-    Content referenced from the <a href="https://www.acm.org/code-of-ethics">ACM Code of Ethics</a>.
+    Referenced from our class modules
 </p>
 
 
