--- a/ethics.html
+++ b/ethics.html
@@ -82,7 +82,7 @@
     </li>
 </ul>
 <p>
-    Referenced from our class modules as well as the <a>https://www.acm.org/code-of-ethics</a>ACM
+    Referenced from our class modules as well as the ACM - <a>https://www.acm.org/code-of-ethics</a>
 </p>
 
 
