--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,21 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My GitHub Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="ethics.html">Ethics</a></li>
+        </ul>
+    </nav>
 
+    <!-- Main Content -->
+    <h1>Welcome to My GitHub Page</h1>
+    <p>This is the homepage of my GitHub Pages site.</p>
+</body>
+</html>
