--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,6 +16,6 @@
 
     <!-- Main Content -->
     <h1>Welcome to My GitHub Page</h1>
-    <p>This is the homepage of my GitHub Pages site.</p>
+    <p>This is the homepage of my GitHub Pages site for IT 304</p>
 </body>
 </html>
