--- a/ethics.html
+++ b/ethics.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <h1>Ethical Considerations in IT</h1>
-        <p>Developers and IT professionals must adhere to ethical guidelines to ensure responsible technology use.</p>
+        <p>Those in IT fields must follow all aspects of ethical guidelines to ensure responsible technology use.</p>
         <h2>Topics Covered</h2>
 <ul>
     <li><strong>Technology and Society:</strong>
